--- a/main.html
+++ b/main.html
@@ -10,6 +10,23 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<div class="imageContainer" >
+		<img src="https://plus.unsplash.com/premium_photo-1692111046507-3f4574def341?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyfHx8ZW58MHx8fHx8&auto=format&fit=crop&w=500&q=60" alt="image">
+	</div>
+		<table border>
+			<tr>
+				<td Width: 200)><img src="https://images.unsplash.com/photo-1692290997682-cfd9aadd0fd6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80"></td>
+				<td Width: 600)>Welcome to SigiloTech, the advanced Technology Company paving the way to the future. We are a team of like-minded and determined individuals, all sharing a vision for success. We believe that our sophisticated technology has the potential to become an industry sensation. Would you like to find out more? Explore our website today.</td>
+				<td Width: 200)><img src="https://images.unsplash.com/photo-1692290997682-cfd9aadd0fd6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80"></td>
+			</tr>
+			<tr>
+				<td Width: 200)><img src="https://images.unsplash.com/photo-1692290997682-cfd9aadd0fd6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80"></td>
+				<td Width: 600)>Welcome to SigiloTech, the advanced Technology Company paving the way to the future. We are a team of like-minded and determined individuals, all sharing a vision for success. We believe that our sophisticated technology has the potential to become an industry sensation. Would you like to find out more? Explore our website today.</td>
+				<td Width: 200)><img src="https://images.unsplash.com/photo-1692290997682-cfd9aadd0fd6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80"></td>
+			</tr>
+		</table>
+		
+	x
 
 </body>
 
